--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^4.0.1",
+    "gulp-favicons": "^3.0.0",
     "gulp-file-include": "^2.3.0",
+    "gulp-filter": "^7.0.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
