--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-pretty-html": "^2.0.10",
     "gulp-rename": "^2.0.0",
+    "gulp-rm": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-sourcemaps": "^3.0.0",
