--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-favicons": "^3.0.0",
     "gulp-file-include": "^2.3.0",
     "gulp-filter": "^7.0.0",
+    "gulp-fonter": "^0.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
@@ -37,6 +38,7 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svg-sprite": "^2.0.3",
     "gulp-svgo": "^2.2.1",
+    "gulp-ttf2woff2": "^4.0.1",
     "gulp-webp": "^4.0.1",
     "gulp-webp-css": "^1.1.0",
     "gulp-webp-html": "^1.0.2",
