--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-svg-sprite": "^2.0.3",
     "gulp-svgo": "^2.2.1",
     "gulp-ttf2woff2": "^4.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
     "gulp-webp-css": "^1.1.0",
     "gulp-webp-html": "^1.0.2",
